shopeMeFrontEnd(Reviews Modules) 1. Write Review Form

--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/orders/order_details_modal.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/orders/order_details_modal.html
@@ -141,7 +141,7 @@
                                     <div th:replace="fragments/fragments :: format_currency(${detail.subtotal})"></div>
 
                                    <div th:if="${!product.reviewedByCustomer && product.customerCanReview}">
-                                       <a href="" class="btn btn-info">Write Review</a>
+                                       <a th:href="${'/write_review/product/'+product.id}" class="btn btn-info">Write Review</a>
                                    </div>
 
                                     <div th:if="${product.reviewedByCustomer}">
