--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/reviews/review_done.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/reviews/review_done.html
@@ -37,42 +37,35 @@
     </div>
 
     <div>
-        <img th:src="@{${product.mainImagePath}}" style="height: 200px"  alt=""/>
+        <img th:src="@{${review.product.mainImagePath}}" style="height: 200px" alt=""/>
     </div>
 
     <div>
         <div>
-            <h4>[[${product.name}]]</h4>
-            <div th:if="${customerReviewed}">
-                <span class="text-success">You already reviewed this product.</span>
-            </div>
-            <div th:if="${NoReviewPermission}">
-                <span class="text-danger">You can't review this product because you did not purchase it, or you have not received it.</span>
-            </div>
+            <h4>[[${review.product.name}]]</h4>
         </div>
+        <div><span class="h4 text-success">Your Review has been posted !</span></div>
     </div>
 
-    <form th:action="@{/post_review}"
-          th:if="${customerCanReview}"
-          method="post" th:object="${review}"
-          style="max-width: 600px; margin: 0 auto">
-        <input type="hidden" name="productId" th:value="${product.id}">
-        <div class="border border-secondary rounded p-3">
-            <p><input type="text" th:field="*{rating}" dir="ltr" data-size="md" class="product-rating-star" data-step="1"></p>
-            <p><input type="text" th:field="*{headline}" class="form-control" required minlength="10" maxlength="128" placeholder="Headline or Summary" /></p>
-            <p>
-                <textarea th:field="*{comment}" cols="10" rows="3" class="form-control" required placeholder="Comment Details"></textarea>
-            </p>
-            <p><input type="submit" value="Post this Review" class="btn btn-primary"></p>
-        </div>
-    </form>
+    <div class="border border-secondary rounded p-3">
+        <p><input type="text" th:value="${review.rating}" dir="ltr" data-size="md" class="product-rating-star">
+        </p>
+        <p><input type="text" th:value="${review.headline}" class="form-control" required minlength="10" maxlength="128"
+                  readonly /></p>
+        <p>
+            <textarea cols="10" rows="3" class="form-control" required
+                      readonly>[[${review.comment}]]</textarea>
+        </p>
+    </div>
     &nbsp;
 
 
     <footer th:replace="~{fragments/fragments :: footer}"></footer>
     <script type="text/javascript">
         $(".product-rating-star").rating({
+            displayOnly: true,
             hoverOnClear: false,
+            showCaption: false,
             theme: 'krajee-svg'
         });
     </script>
