shopeMeFrontEnd(Vote Review Modules) 1. Coding View layer for Project 2. problems with Javascript file Hoisting

--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/address_form.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/address_form.html
@@ -144,7 +144,6 @@
 </script>
 <script type="text/javascript"
         th:src="@{/js/common_customer_form.js}"></script>
-<script type="text/javascript"
-        th:src="@{/js/common.js}"></script>
+<script type="text/javascript" th:src="@{/js/common.js}"></script>
 </body>
 </html>
