--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/addresses.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/addresses.html
@@ -164,6 +164,7 @@
 
     <div th:replace="~{fragments/modal :: confirm_modal}"></div>
     <div th:replace="~{navigation :: footer_menu}"></div>
+    <script type="text/javascript" th:src="@{/js/common.js}"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('.linkDelete').on('click', function (evt) {
