--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/login.html
@@ -62,5 +62,7 @@
 
     <footer th:replace="~{navigation :: footer}"></footer>
 </div>
+<script th:src="@{/js/common.js}"></script>
+
 </body>
 </html>
