--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/search_result.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/search_result.html
@@ -48,6 +48,7 @@
     <div th:replace="~{navigation :: footer_menu}"></div>
 
 </div>
+<script th:src="@{/js/common.js}"></script>
 <script type="text/javascript">
     $(".product-detail-rating-star").rating({
 
