--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/reviews/review_done.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/reviews/review_done.html
@@ -61,6 +61,7 @@
 
 
     <footer th:replace="~{fragments/fragments :: footer}"></footer>
+    <script th:src="@{/js/common.js}"></script>
     <script type="text/javascript">
         $(".product-rating-star").rating({
             displayOnly: true,
