--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments.html
@@ -7,27 +7,18 @@
           content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 
     <title>[[${title}]] - [[${SITE_NAME}]]</title>
-    <link rel="stylesheet" type="text/css"
-          th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" type="text/css"
-          th:href="@{/styles/style.css}"/>
-    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script type="text/javascript"
-            th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css"
-          th:href="@{/webjars/font-awesome/5.15.1/css/all.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/styles/style.css}"/>
-    <script type="text/javascript"
-            th:src="@{/webjars/font-awesome/5.15.1/js/all.min.js}"></script>
+
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script type="text/javascript"
-            th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <script type="text/javascript"
-            th:src="@{/js/common.js}"></script>
-    <link rel="stylesheet" th:href="@{/styles/rte_theme_default.css}">
-    <script type="text/javascript" th:src="@{/js/all_plugins.js}"></script>
-    <script type="text/javascript" th:src="@{/js/rte.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/font-awesome/5.15.1/css/all.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles/style.css}"/>
+    <script type="text/javascript" th:src="@{/webjars/font-awesome/5.15.1/js/all.min.js}"></script>
 
 
 
@@ -39,27 +30,14 @@
           content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 
     <title>[[${title}]] - [[${SITE_NAME}]]</title>
-    <link rel="stylesheet" type="text/css"
-          th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" type="text/css"
-          th:href="@{/styles/style.css}"/>
-    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script type="text/javascript"
-            th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-
-    <link rel="stylesheet" type="text/css"
-          th:href="@{/webjars/font-awesome/5.15.1/css/all.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/styles/style.css}"/>
-    <script type="text/javascript"
-            th:src="@{/webjars/font-awesome/5.15.1/js/all.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script type="text/javascript"
-            th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <script type="text/javascript"
-            th:src="@{/js/common.js}"></script>
-    <link rel="stylesheet" th:href="@{/styles/rte_theme_default.css}">
-    <script type="text/javascript" th:src="@{/js/all_plugins.js}"></script>
-    <script type="text/javascript" th:src="@{/js/rte.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/font-awesome/5.15.1/css/all.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles/style.css}"/>
+    <script type="text/javascript" th:src="@{/webjars/font-awesome/5.15.1/js/all.min.js}"></script>
 
 
 
