--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments/fragments.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments/fragments.html
@@ -18,11 +18,7 @@
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript"
             th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <script type="text/javascript"
-            th:src="@{/js/common.js}"></script>
-    <link rel="stylesheet" th:href="@{/styles/rte_theme_default.css}">
-    <script type="text/javascript" th:src="@{/js/all_plugins.js}"></script>
-    <script type="text/javascript" th:src="@{/js/rte.js}"></script>
+    <script th:src="@{/js/common.js}"></script>
 </head>
 
 <body>
