--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_detail.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_detail.html
@@ -140,11 +140,13 @@
     <div th:replace="~{product/images_carousel :: content}"></div>
     <div th:replace="~{navigation :: footer_menu}"></div>
 
+    <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/jquery.number.min.js}"></script>
     <script th:src="@{/js/quantity_control.js}"></script>
     <script th:src="@{/js/add_to_cart.js}"></script>
-    <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/common_rating.js}"></script>
+    <script th:src="@{/js/review_vote.js}"></script>
+
     <script type="text/javascript">
         contextPath = "[[@{/}]]";
         productId = "[[${product.id}]]";
@@ -173,16 +175,6 @@
         });
 
     </script>
-
-    <style>
-        @media (min-width: 768px) {
-            .modal-xl {
-                width: 90%;
-                max-width: 1200px;
-            }
-        }
-    </style>
-
 </div>
 </body>
 </html>
