--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/products_by_category.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/products_by_category.html
@@ -54,17 +54,17 @@
 
 
     <div th:replace="~{navigation :: footer_menu}"></div>
-
-    <script type="text/javascript">
-        $(".product-detail-rating-star").rating({
-
-            displayOnly: true,
-            hoverOnClera: false,
-            showCaption: false,
-            theme: 'krajee-svg'
-        });
-    </script>
-
 </div>
+
+<script th:src="@{/js/common.js}"></script>
+<script type="text/javascript">
+    $(".product-detail-rating-star").rating({
+
+        displayOnly: true,
+        hoverOnClera: false,
+        showCaption: false,
+        theme: 'krajee-svg'
+    });
+</script>
 </body>
 </html>
