--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/reviews/reviews_form.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/reviews/reviews_form.html
@@ -37,7 +37,7 @@
     </div>
 
     <div>
-        <img th:src="@{${product.mainImagePath}}" style="height: 200px"  alt=""/>
+        <img th:src="@{${product.mainImagePath}}" style="height: 200px" alt=""/>
     </div>
 
     <div>
@@ -58,10 +58,13 @@
           style="max-width: 600px; margin: 0 auto">
         <input type="hidden" name="productId" th:value="${product.id}">
         <div class="border border-secondary rounded p-3">
-            <p><input type="text" th:field="*{rating}" dir="ltr" data-size="md" class="product-rating-star" data-step="1"></p>
-            <p><input type="text" th:field="*{headline}" class="form-control" required minlength="10" maxlength="128" placeholder="Headline or Summary" /></p>
+            <p><input type="text" th:field="*{rating}" dir="ltr" data-size="md" class="product-rating-star"
+                      data-step="1"></p>
+            <p><input type="text" th:field="*{headline}" class="form-control" required minlength="10" maxlength="128"
+                      placeholder="Headline or Summary"/></p>
             <p>
-                <textarea th:field="*{comment}" cols="10" rows="3" class="form-control" required placeholder="Comment Details"></textarea>
+                <textarea th:field="*{comment}" cols="10" rows="3" class="form-control" required
+                          placeholder="Comment Details"></textarea>
             </p>
             <p><input type="submit" value="Post this Review" class="btn btn-primary"></p>
         </div>
@@ -70,11 +73,12 @@
 
 
     <footer th:replace="~{fragments/fragments :: footer}"></footer>
-    <script type="text/javascript">
-        $(".product-rating-star").rating({
-            hoverOnClear: false,
-            theme: 'krajee-svg'
-        });
-    </script>
 </div>
+<script th:src="@{/js/common.js}"></script>
+<script type="text/javascript">
+    $(".product-rating-star").rating({
+        hoverOnClear: false,
+        theme: 'krajee-svg'
+    });
+</script>
 </body>
