--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/reviews/review_done.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/reviews/review_done.html
@@ -4,8 +4,9 @@
     <head th:replace="~{fragments :: head_replace('Write Product Review', 'tag')}"></head>
     <link th:href="@{/rating-star/css/star-rating.css}" media="all" rel="stylesheet" type="text/css">
     <link th:href="@{/rating-star/themes/krajee-svg/theme.css}" media="all" rel="stylesheet" type="text/css">
-    <script th:href="@{/rating-star/themes/krajee-svg/theme.js}" type="text/javascript"></script>
-    <script th:href="@{/rating-star/js/star-rating.js}" type="text/javascript"></script>
+    <script th:src="@{/rating-star/js/star-rating.js}" type="text/javascript"></script>
+    <script th:src="@{/rating-star/themes/krajee-svg/theme.js}" type="text/javascript"></script>
+
 </head>
 <body>
 <div class="container-fluid text-center">
