--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/reviews/reviews_product.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/reviews/reviews_product.html
@@ -4,8 +4,9 @@
     <head th:replace="~{fragments :: head_replace(${pageTitle}, 'tag')}"></head>
     <link th:href="@{/rating-star/css/star-rating.css}" media="all" rel="stylesheet" type="text/css">
     <link th:href="@{/rating-star/themes/krajee-svg/theme.css}" media="all" rel="stylesheet" type="text/css">
-    <script th:href="@{/rating-star/themes/krajee-svg/theme.js}" type="text/javascript"></script>
-    <script th:href="@{/rating-star/js/star-rating.js}" type="text/javascript"></script>
+    <script th:src="@{/rating-star/js/star-rating.js}" type="text/javascript"></script>
+    <script th:src="@{/rating-star/themes/krajee-svg/theme.js}" type="text/javascript"></script>
+
 </head>
 <body>
 <div class="container-fluid">
@@ -18,6 +19,17 @@
         </div>
         <div class="col-xs-8">
             <div><h3>[[${product.name}]]</h3></div>
+
+            <div>
+                <a th:href="@{'/ratings/'+${product.alias}+'/page/'+${currentPage}+'?sortField=votes&sortDir=desc'}">
+                    Sort by most Voted
+                </a>
+                &nbsp;
+                <a th:href="@{'/ratings/'+${product.alias}+'/page/'+${currentPage}+'?sortField=reviewTime&sortDir=asc'}">
+                    Sort by Most Recent
+                </a>
+            </div>
+
             <div class="row m-1">
                 <div class="col-xs">
                     <input type="text" class="product-detail-rating-star" dir="ltr" data-size="md"
