--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reviews/review_detail_modal.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reviews/review_detail_modal.html
@@ -47,6 +47,13 @@
     </div>
 
     <div class="form-group row">
+        <label for="votes" class="col-sm-2 col-form-label">Votes:</label>
+        <div class="col-sm-10">
+            <input type="text" id="votes" readonly class="form-control" th:value="${review.votes}"/>
+        </div>
+    </div>
+
+    <div class="form-group row">
         <label for="reviewTime" class="col-sm-2 col-form-label">Review Time:</label>
         <div class="col-sm-10">
             <span id="reviewTime" th:text="${#dates.format(review.reviewTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
