--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reviews/review_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reviews/review_form.html
@@ -53,6 +53,13 @@
                     </div>
                 </div>
 
+                <div class="form-group row">
+                    <label for="votes" class="col-sm-2 col-form-label">Votes:</label>
+                    <div class="col-sm-10">
+                        <input type="text" id="votes" readonly class="form-control" th:value="${review.votes}" />
+                    </div>
+                </div>
+
                 <!--        Review Time -->
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Review Time:</label>
