--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reviews/reviews.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reviews/reviews.html
@@ -7,7 +7,7 @@
     <div th:replace="~{fragments/navigation :: topNavBar}"></div>
 
     <div>
-        <h1>Manage Orders</h1>
+        <h1>Manage Reviews</h1>
     </div>
 
     <div th:replace="~{fragments/fragments :: search_form_and_message()}"></div>
